# frontend/openapi.json
@@ -5105,6 +5105,10 @@
             "title": "Category",
             "type": "string"
           },
+          "display_lb": {
+            "title": "Display Lb",
+            "type": "string"
+          },
           "id": {
             "format": "uuid",
             "title": "Id",
@@ -5144,6 +5148,7 @@
           "value",
           "unit",
           "normalized_kg",
+          "display_lb",
           "time",
           "provenance",
           "notes"
